# better-basket-oa

./: .env.example  .gitignore  README.md  pyproject.toml  run_matcher.py  runtime_benchmarks.txt
docs/superpowers/plans/: 2026-07-08-grocery-product-matching-implementation.md
docs/superpowers/specs/: 2026-07-08-grocery-product-matching-design.md
matcher/: cli.py  config.py  embeddings.py  exact.py  identifiers.py  io.py  llm.py  normalize.py  parsing.py  persistence.py  pipeline.py  product_rules.py  resolution.py  retrieval.py  schemas.py  scoring.py
tests/: test_normalize.py  test_parsing.py  test_pipeline_smoke.py  test_resolution.py  test_retrieval.py  test_scoring.py
