[project]
name = "better-basket-matcher"
version = "0.1.0"
description = "Store A to Store B product matching pipeline"
requires-python = ">=3.11"
dependencies = [
  "diskcache>=5.6.3",
  "numpy>=2.0.0",
  "openai>=1.35.0",
  "orjson>=3.10.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pytest>=8.2.0",
  "python-dotenv>=1.0.1",
  "rapidfuzz>=3.9.0",
  "scikit-learn>=1.5.0",
  "tenacity>=8.4.0",
]

[project.scripts]
bb-match = "matcher.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
